# epp-project-inclass

./: CHANGES.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
paper/: epp_inclass.tex  epp_inclass_pres.tex  task_paper.py
src/epp_inclass/analysis/: task_analysis.py
src/epp_inclass/data_management/: __init__.py  task_data_management.py
src/epp_inclass/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
