[metadata]
name = epp_inclass
description = A project with pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/jstolt3/epp_inclass
author = Jake Stoltzfus
author_email = s6jastol@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Changelog = https://github.com/jstolt3/epp_inclass
    Documentation = hhttps://github.com/jstolt3/epp_inclass
    Github = https://github.com/jstolt3/epp_inclass
    Tracker = https://github.com/jstolt3/epp_inclass/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/epp_inclass/_version.py
